tests/reference/asr-character1-8679f4b.stderr
syntax error: Internal Compiler Error: syntax is ambiguous in the parser
 --> tests/character1.f90:2:7
  |
2 |       character*(*) mess !This is string whose length is decided at compile time
  |       ^^^^^^^^^^^^^ 
